--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                             </div>
 
                             <!-- second day block -->
-                            <div class="weather__condition">
+                            <div class="weather__condition weahter__condition2">
                                 <p><span class="temp__degrs2 temp--24 ">55</span></p>
                                 <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
                                 <div class="time">
@@ -241,7 +241,7 @@
 
 
 
-                            <div class="weather__condition">
+                            <div class="weather__condition weahter__condition2">
                                 <p><span class="temp__degrs2 temp--24 ">55</span></p>
                                 <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
                                 <div class="time">
@@ -249,7 +249,7 @@
                                 </div>
                             </div>
 
-                            <div class="weather__condition">
+                            <div class="weather__condition weahter__condition2">
                                 <p><span class="temp__degrs2 temp--24 ">55</span></p>
                                 <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
                                 <div class="time">
@@ -596,7 +596,6 @@
 
                     </div>
                 </div>
-                <!-- <img id="slide-right" class="arrow" src="images/64x64/arrow-right.png" width="50px" height="50px" /> -->
 
 
 
