--- a/index.html
+++ b/index.html
@@ -396,6 +396,13 @@
                                     <span class="time__hourly2 time--24">22</span>
                                 </div>
                             </div>
+                            <div class="weather__condition">
+                                <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                                <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                                <div class="time">
+                                    <span class="time__hourly2 time--24">22</span>
+                                </div>
+                            </div>
                         </div>
                         <!-- forecast tomorow -->
 
