--- a/index.html
+++ b/index.html
@@ -592,7 +592,38 @@
 
 
 
+                        <div class="slider-container">
+                            <div class="slider-item">
+                                <h3 class="forecast--day day-1">Today</h3>
+                                <p id="forecast--date1" class="forecast--date">31/05</p>
+                                <p class="forecast--day-temperature"> 20°C</p>
+                                <p class="forecast--night-temperature">10°C</p>
+                                <img class="forecast--images forc--image-1" src="images/64x64/day/113.png" alt="">
+                            </div>
 
+                            <div class="slider-item">
+                                <h3 class="forecast--day day-2">Today</h3>
+                                <p id="forecast--date2" class="forecast--date">31/05</p>
+                                <p class="forecast--day-temperature"> 20°C</p>
+                                <p class="forecast--night-temperature">10°C</p>
+                                <img class="forecast--images forc--image-2" src="images/64x64/day/113.png" alt="">
+                            </div>
+
+                            <div class="slider-item">
+                                <h3 class="forecast--day day-3">Today</h3>
+                                <p id="forecast--date3" class="forecast--date">31/05</p>
+                                <p class="forecast--day-temperature"> 20°C</p>
+                                <p class="forecast--night-temperature">10°C</p>
+                                <img class="forecast--images forc--image-3" src="images/64x64/day/113.png" alt="">
+                            </div>
+
+
+
+
+
+
+
+                        </div>
 
 
 
@@ -610,10 +641,10 @@
             </div>
 
         </div>
-        <script src="main.js"></script>
-        <!-- <script src="your-script.js" async></script> -->
+        <script src="main.js "></script>
+        <!-- <script src="your-script.js " async></script> -->
 
-        <!-- <script src="your-script.js" defer></script> -->
+        <!-- <script src="your-script.js " defer></script> -->
     </body>
 
     </html>
