--- a/index.html
+++ b/index.html
@@ -598,24 +598,24 @@
                             <div class="slider-item">
                                 <h3 class="forecast--day day-1">Today</h3>
                                 <p id="forecast--date1" class="forecast--date">31/05</p>
-                                <p class="forecast--day-temperature"><span class="forecast--day-degrees1">20</span></p>
-                                <p class="forecast--night-temperature"><span class="forecast--night-degrees1">10</span></p>
+                                <p class="forecast--day-temperature"><span class="forecast--day-degrees1 forecast--degrees-sign">20</span></p>
+                                <p class="forecast--night-temperature"><span class="forecast--night-degrees1 forecast--degrees-signNight">10</span></p>
                                 <img class="forecast--images forc--image-1" src="images/64x64/day/113.png" alt="">
                             </div>
 
                             <div class="slider-item">
                                 <h3 class="forecast--day day-2">Today</h3>
                                 <p id="forecast--date2" class="forecast--date">31/05</p>
-                                <p class="forecast--day-temperature"><span class="forecast--day-degrees2">20</span></p>
-                                <p class="forecast--night-temperature"><span class="forecast--night-degrees2">10</span></p>
+                                <p class="forecast--day-temperature"><span class="forecast--day-degrees2 forecast--degrees-sign">20</span></p>
+                                <p class="forecast--night-temperature"><span class="forecast--night-degrees2 forecast--degrees-signNight">10</span></p>
                                 <img class="forecast--images forc--image-2" src="images/64x64/day/113.png" alt="">
                             </div>
 
                             <div class="slider-item">
                                 <h3 class="forecast--day day-3">Today</h3>
                                 <p id="forecast--date3" class="forecast--date">31/05</p>
-                                <p class="forecast--day-temperature"><span class="forecast--day-degrees3">20</span></p>
-                                <p class="forecast--night-temperature"><span class="forecast--night-degrees3">10</span></p>
+                                <p class="forecast--day-temperature"><span class="forecast--day-degrees3 forecast--degrees-sign">20</span></p>
+                                <p class="forecast--night-temperature"><span class="forecast--night-degrees3 forecast--degrees-signNight">10</span></p>
                                 <img class="forecast--images forc--image-3" src="images/64x64/day/113.png" alt="">
                             </div>
 
