--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="container">
             <div class="weather__app " id="change__backgr">
                 <div class="weahter__condition-now">
-                    <h1 class="birthday">Linksmai Atsvest <br>Gimtadieni!!! &#x1F60A;&#127864;
-                    </h1>
+<!--                     <h1 class="birthday">Linksmai Atsvest <br>Gimtadieni!!! &#x1F60A;&#127864;
+                    </h1> -->
                     <h1 id="city" class="city">
 
                     </h1>
